Added new webpack and npm settings

--- a/package.json
+++ b/package.json
@@ -8,5 +8,11 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "webpack": "^1.12.14"
+  },
+  "scripts": {
+    "build": "webpack"
+  }
 }
